# inertiallabs-ros-pkgs

inertiallabs_ins/: CMakeLists.txt  package.xml
inertiallabs_ins/launch/: ins.launch
inertiallabs_ins/src/: il_ins.cpp
inertiallabs_msgs/: CMakeLists.txt  package.xml
inertiallabs_msgs/msg/: GNSSData.msg  GPSData.msg  INSData.msg
inertiallabs_sdk/: ILDriver.cpp  UDDParser.cpp  UDDParser.h  dataStructures.h
