<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inertiallabs_ins</name>
  <version>1.0.0</version>
  <description>The Inertial Labs INS package</description>

  <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">http://exmaple.com</url>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>civros_msgs</depend>
  <depend>civros_utils</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>inertiallabs_msgs</depend>
  <depend>connectivity_client2</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
